# echorpc

./: .gitignore  LICENSE  README.md
.github/workflows/: publish-npm.yml  publish-pypi.yml
python/: README.md  pyproject.toml  requirements.txt
python/examples/: demo_server.py
python/src/echorpc/: __init__.py  client.py  connection.py  core.py  echo.py  echo_client.py  echo_server.py  router.py  server.py  transport.py
python/src/echorpc/ws/: __init__.py  client.py  connection.py  server.py
python/src/tests/: test_echo.py  test_router.py  test_ws.py
python/tests/: test.py  test_http.py  test_python.py  test_router.py  test_ws.py
python/viberpc/: __init__.py  client.py  connection.py  core.py  router.py  server.py  transport.py
python/viberpc/http/: __init__.py  client.py  connection.py  server.py
python/viberpc/ws/: __init__.py  client.py  connection.py  server.py
typescript/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsdown.config.ts  vitest.config.ts
typescript/examples/: node-client.ts  node-server.ts
typescript/examples/web/: index.html  vite.config.js
typescript/src/: client.ts  connection.ts  core.ts  echo-client.ts  echo-server.ts  echo.ts  index.ts  router.ts  server.ts  transport.ts
typescript/src/http/: client.ts  connection.ts  server.ts
typescript/src/ws/: client.ts  connection.ts  server.ts
typescript/tests/: echo.test.ts  http.test.ts  router.test.ts  test_client.test.ts  test_server.test.ts  ws.test.ts
