[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "viberpc"
version = "0.1.0"
description = "Production-grade JSON-RPC 2.0 with pluggable transports (WS/HTTP)"
requires-python = ">=3.10"
dependencies = ["websockets>=14.0", "aiohttp>=3.9"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
