[project]
name = "echorpc"
version = "0.1.0"
description = "Bidirectional JSON-RPC 2.0 over WebSocket — TypeScript & Python."
requires-python = ">=3.12"
dependencies = ["aiohttp>=3.13.4", "websockets>=16.0"]

[tool.taskipy.tasks]
test = "pytest -v"
check = "ty check ."
build = "hatch build"
lint = "ruff check --fix .; ruff format ."

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.15.7",
  "taskipy2>=1.16.1",
  "ty>=0.0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/echorpc"]

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # Pyflakes
  "I", # isort
]
ignore = [
  "E501", # Line too long
  "F403", # from xxx import *
]
